# stdwell

./: .gitignore  CMakeLists.txt
cuda/: CMakeLists.txt
cuda/src/: kernel.cu  kernel.hpp  main.cpp
data/: gen_data.m  plot_data.m  read_data.m
data/real/norne/: Bnnzs.txt  Ccols.txt  Cnnzs.txt  Dnnzs.txt  pw.txt  s.txt  t.txt  t_-cuda.txt  t_-flow.txt  v.txt  v_-cuda.txt  v_-flow.txt  val_pointers.txt  x.txt  y.txt  y_-cuda.txt  y_-flow.txt  y_-matlab.txt  y_-opencl.txt  y_.txt
data/real/spe10model1/: Bcols.txt  Bnnzs.txt  Cnnzs.txt  Dnnzs.txt  pw.txt  s.txt  t.txt  t_-cuda.txt  t_-flow.txt  v.txt  v_-flow.txt  v_-opencl.txt  x.txt  y.txt  y_-cuda.txt  y_-flow.txt  y_-matlab.txt  y_.txt
data/real/spe1case1/: Bnnzs.txt  Cnnzs.txt  Dnnzs.txt  pw.txt  s.txt  t.txt  t_-flow.txt  t_-opencl.txt  v.txt  v_-cuda.txt  v_-flow.txt  x.txt  y.txt  y_-cuda.txt  y_-flow.txt  y_-matlab.txt  y_-opencl.txt  y_.txt
data/real/spe1case2/: Bnnzs.txt  Cnnzs.txt  Dnnzs.txt  pw.txt  s.txt  t.txt  t_-cuda.txt  t_-flow.txt  v.txt  v_-cuda.txt  v_-flow.txt  x.txt  y.txt  y_-cuda.txt  y_-flow.txt  y_-matlab.txt  y_-opencl.txt
data/real/spe3case1/: Bnnzs.txt  Cnnzs.txt  Dnnzs.txt  pw.txt  s.txt  t.txt  t_-cuda.txt  t_-flow.txt  v.txt  v_-flow.txt  v_-opencl.txt  x.txt  y_-cuda.txt  y_-flow.txt  y_-matlab.txt  y_-opencl.txt  y_.txt
data/real/spe3case2/: Bcols.txt  Bnnzs.txt  Cnnzs.txt  Dnnzs.txt  pw.txt  s.txt  t.txt  t_-flow.txt  t_-opencl.txt  v.txt  v_-cuda.txt  v_-flow.txt  x.txt  y.txt  y_-cuda.txt  y_-flow.txt  y_-matlab.txt  y_-opencl.txt  y_.txt
data/real/spe9_cp/: Bcols.txt  Bnnzs.txt  Cnnzs.txt  Dnnzs.txt  pw.txt  s.txt  t.txt  t_-flow.txt  t_-opencl.txt  v.txt  v_-cuda.txt  v_-flow.txt  val_pointers.txt  x.txt  y.txt  y_-cuda.txt  y_-flow.txt  y_-matlab.txt  y_-opencl.txt  y_.txt
matlab/: plot_data.m  read_data.m
opencl/src/: kernel.hpp  main.cpp
src/: kernel.hpp  main.cpp  opencl.cpp
